--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "ifdef-loader": "^2.0.3",
-    "webpack": "4.16.3",
-    "webpack-cli": "3.1.0"
+    "ifdef-loader": "2.1.1",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.2.3"
   }
 }
