--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "student-bundle",
-  "version": "0.10.1",
+  "version": "1.0.0",
   "description": "Provides Student access level functionality to Alloy City clients.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alloy-city/student.git"
+  },
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,11 +13,11 @@
     "build:prod": "npx webpack --config webpack.prod.config.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "GPL-3.0-only",
   "dependencies": {},
   "devDependencies": {
     "ifdef-loader": "2.1.1",
-    "webpack": "4.29.6",
-    "webpack-cli": "3.2.3"
+    "webpack": "4.35.3",
+    "webpack-cli": "3.3.5"
   }
 }
