--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "student-bundle",
-  "version": "1.8.0",
+  "version": "1.8.1",
   "description": "Provides Student access level functionality to Alloy City clients.",
   "repository": {
     "type": "git",
@@ -12,12 +12,13 @@
     "build:dev": "npx webpack --config webpack.dev.config.js",
     "build:prod": "npx webpack --config webpack.prod.config.js"
   },
+  "install": "npm run build:prod",
   "author": "Pedro SOUSA",
   "license": "GPL-3.0-only",
   "dependencies": {},
   "devDependencies": {
     "ifdef-loader": "2.1.5",
-    "webpack": "4.43.0",
-    "webpack-cli": "3.3.11"
+    "webpack": "4.44.1",
+    "webpack-cli": "3.3.12"
   }
 }
