[WIP] testing git stuff

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:dev": "npx webpack --config webpack.dev.config.js",
-    "build:prod": "npx webpack --config webpack.prod.config.js"
+    "build:prod": "npx webpack --config webpack.prod.config.js",
+    "install": "npm run build:prod"
   },
-  "install": "npm run build:prod",
   "author": "Pedro SOUSA",
   "license": "GPL-3.0-only",
   "dependencies": {},
