--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:dev": "webpack --config webpack.dev.config.js",
     "build:prod": "webpack --config webpack.prod.config.js",
     "install": "npm run build:prod",
-    "prepare": "git pull && npm run build:prod"
+    "prepare": "npm run build:prod"
   },
   "author": "Pedro SOUSA",
   "license": "GPL-3.0-only",
