--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:dev": "npx webpack --config webpack.dev.config.js",
     "build:prod": "npx webpack --config webpack.prod.config.js",
-    "prepare": "git branch --set-upstream-to=origin/master master && git pull && npm run build:prod"
+    "prepare": "git fetch && git pull && npm run build:prod"
   },
   "author": "Pedro SOUSA",
   "license": "GPL-3.0-only",
