--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:dev": "npx webpack --config webpack.dev.config.js",
-    "build:prod": "npx webpack --config webpack.prod.config.js",
+    "build:prod": "npx webpack --config webpack.prod.config.js"
   },
   "author": "Pedro SOUSA",
   "license": "GPL-3.0-only",
